docs/language-grammar.ebnf
(* Current language grammar implemented by Parser.cpp. *)

program     = { declaration } ;

declaration = importDecl
            | exportedFunDecl
            | exportedStructDecl
            | exportDecl
            | enumDecl
            | structDecl
            | implDecl
            | funDecl
            | letDecl
            | statement ;

statement   = ifStmt
            | ifLetStmt
            | whileStmt
            | whileLetStmt
            | forStmt
            | breakStmt
            | continueStmt
            | returnStmt
            | block
            | exprStmt ;

funDecl     = "fun", identifier, [ typeParameters ],
              "(", [ parameters ], ")",
              [ ":", typeExpr ],
              block ;

typeParameters = "<", typeParameter,
                 { ",", typeParameter }, [ "," ], ">" ;

typeParameter  = identifier, [ ":", typeExpr,
                              { "+", typeExpr } ] ;

structDecl  = "struct", identifier, [ typeParameters ],
              "{", [ structFields ], "}" ;

enumDecl    = "enum", identifier, [ typeParameters ],
              "{", [ enumVariants ], "}" ;

enumVariants = enumVariant,
               { ",", enumVariant }, [ "," ] ;

enumVariant = identifier,
              [ "(", [ enumPayloads ], ")" ] ;

enumPayloads = enumPayload,
               { ",", enumPayload }, [ "," ] ;

enumPayload  = [ identifier, ":" ], typeExpr ;

(* Enum variant payload fields are either all named or all positional;
   mixing the two forms and duplicate field names are parse errors.
   Constructors and patterns remain positional regardless of the
   declaration form. *)

implDecl    = "impl", identifier, [ typeParameters ],
              "{", { methodDecl }, "}" ;

methodDecl  = "fun", identifier, [ typeParameters ],
              "(", [ parameters ], ")",
              [ ":", typeExpr ],
              block ;

structFields = structField,
               { ",", structField }, [ "," ] ;

structField = [ "private" ], identifier, ":", typeExpr ;

parameters  = parameter,
              { ",", parameter }, [ "," ] ;

parameter   = identifier,
              [ ":", typeExpr ] ;

letDecl     = "let", [ "mut" ], identifier,
              [ ":", typeExpr ],
              "=", expression, ";" ;

importDecl  = "import", ( string,
              [ "as", identifier ]
            | "{", importSpecifier,
              { ",", importSpecifier }, [ "," ], "}",
              "from", string ), ";" ;

importSpecifier = identifier, [ "as", identifier ] ;

exportedFunDecl = "export", funDecl ;

exportedStructDecl = "export", structDecl ;

exportDecl  = "export", identifier,
              { ",", identifier },
              [ "," ],
              [ "from", string ], ";" ;

ifStmt      = "if", expression, block,
              [ "else", ( ifStmt | block ) ] ;

ifLetStmt   = "if", "let", identifier, "=", expression,
              block, [ "else", block ] ;

(* `if`/`while` condition parentheses are optional.  A parenthesized
   condition is ordinary expression grouping, so `if (x)` and `if x` are
   equivalent and the formatter preserves whichever spelling was written. *)

(* A struct constructor may appear in a condition.  When its opening brace
   would otherwise be confused with the following block, use grouping, for
   example `if (Point { x: 1 } == target) { ... }`.  Bare conditions such as
   `if ready { ... }` remain valid. *)

matchExpr   = "match", expression, "{", matchArm,
              { ",", matchArm }, [ "," ], "}" ;

matchArm    = pattern, [ "if", expression ], "=>",
              ( block | expression ) ;

(* Commas separate match arms. After a block-bodied arm the comma is
   optional, preserving the legacy statement form; after an
   expression-bodied arm the comma is required. *)

pattern     = patternAtom,
              { "|", patternAtom } ;

patternAtom = "_"
            | identifier
            | literalPattern
            | recordPattern
            | variantPattern ;

literalPattern = "nil"
               | "true"
               | "false"
               | number
               | string ;

variantPattern = identifier, ".", identifier,
                 [ "(", [ patternArguments ], ")" ]
               | identifier, ".", identifier, ".", identifier,
                 [ "(", [ patternArguments ], ")" ] ;

patternArguments = patternArgument,
                   { ",", patternArgument }, [ "," ] ;

patternArgument = pattern ;

recordPattern = identifier, "{", [ recordPatternFields ], "}"
              | identifier, ".", identifier, "{", [ recordPatternFields ], "}" ;

recordPatternFields = ".."
                    | recordPatternField,
                      { ",", recordPatternField },
                      ( [ ",", ".." ] | [ "," ] ) ;

recordPatternField = identifier, [ ":", pattern ] ;

(* A record field without `:` is shorthand for a binding with the same name:
   `Point { x, y }` means `Point { x: x, y: y }`. A final `..` explicitly
   ignores the remaining fields, so `Point { x, .. }` is a partial pattern. *)

whileStmt   = "while", expression, block ;

whileLetStmt = "while", "let", identifier, "=", expression, block ;

forStmt     = "for", ( forInClause | cForClause ), block ;

forInClause = identifier, "in", expression ;

cForClause  = [ forInitializer ], ";",
              [ expression ], ";",
              [ expression ] ;

forInitializer = letForInitializer
               | expression ;

letForInitializer = "let", identifier,
                    [ ":", typeExpr ],
                    "=", expression ;

breakStmt   = "break", ";" ;

continueStmt = "continue", ";" ;

block       = "{", { declaration }, "}" ;

returnStmt  = "return", [ expression ], ";" ;

exprStmt    = expression, ";" ;

expression  = assignment ;

assignment  = coalesce,
              [ ( "=" | "+=" | "-=" | "*=" | "/=" ), assignment ] ;

coalesce    = logicalOr, [ "??", coalesce ] ;

(* `??` is right-associative: `a ?? b ?? c` groups as `a ?? (b ?? c)`. *)

assignmentTarget = identifier
                 | expression, "[", expression, "]"
                 | expression, ".", identifier ;

(* Assignment is right-associative. Plain `=` and compound assignment operators
   accept variable, index, and field targets (`name = value`, `array[index] = value`,
   `object.field = value`, `name += value`, `array[index] += value`, and
   `object.field += value`). Compound assignment is numeric-only. All other left
   sides are parse errors. *)

logicalOr   = logicalAnd,
              { "||", logicalAnd } ;

logicalAnd  = equality,
              { "&&", equality } ;

equality    = comparison,
              { ( "==" | "!=" ), comparison } ;

comparison  = term,
              { ( "<" | "<=" | ">" | ">=" | "..<" ), term } ;

(* `start..<stop` creates a half-open range with step 1. The operator shares
   the comparison precedence and does not provide slicing or a closed-range
   form; use `range(start, stop, step)` when a custom step is needed. *)

term        = factor,
              { ( "+" | "-" ), factor } ;

factor      = unary,
              { ( "*" | "/" ), unary } ;

unary       = ( "!" | "-" ), unary
            | call ;

call        = primary,
              { genericCall
              | "(", [ arguments ], ")"
              | "[", expression, "]"
              | memberPostfix
              | "?" } ;

(* `?` is a postfix unwrap: `expr?` yields the non-nil value or returns nil
   from the enclosing function when the expression is nil. It is valid only
   in functions whose return type is `optional<U>`. *)

genericCall = "::", callTypeArguments, "(", [ arguments ], ")" ;

memberPostfix = ".", identifier,
                [ "::", callTypeArguments ],
                [ "(", [ arguments ], ")" ] ;

(* A generic call uses the explicit postfix form name::<T>(arguments) or
   namespace.name::<T>(arguments). Ordinary calls infer type arguments, while
   generic declarations and type annotations continue to use name<T>. *)

callTypeArguments = "<", typeExpr,
                    { ",", typeExpr }, [ "," ], ">" ;

arguments   = expression,
              { ",", expression }, [ "," ] ;

array       = "[", [ arguments ], "]" ;

map         = "{", [ mapEntries ], "}" ;

mapEntries  = mapEntry,
              { ",", mapEntry }, [ "," ] ;

mapEntry    = expression, ":", expression ;

(* A brace in expression position is a map literal; statement-level braces
   remain blocks. Anonymous struct literals are not a separate form. A
   qualified member call such as Result.Ok(value) is a variant constructor
   when Result is an enum type. *)


structConstructor = [ identifier, "." ], identifier, [ typeArguments ],
                     "{", [ fields ], "}" ;

fields      = field,
              { ",", field }, [ "," ] ;

field       = identifier, ":", expression ;

functionExpr = "fun", [ typeParameters ], "(", [ parameters ], ")",
               [ ":", typeExpr ],
               block ;

primary     = functionExpr
            | matchExpr
            | "false"
            | "true"
            | "nil"
            | number
            | string
            | array
            | map
            | structConstructor
            | identifier
            | "(", expression, ")" ;

typeExpr    = nullableType ;

nullableType = primaryType, [ "?" ] ;

primaryType = "optional", "<", typeExpr, ">"
            | arrayType
            | mapType
            | functionType
            | qualifiedType
            | simpleType ;

arrayType   = "[", typeExpr, "]" ;

mapType     = "map", "<", typeExpr, ",", typeExpr, ">" ;

simpleType  = identifier, [ genericTypeArguments ] ;

qualifiedType = identifier, ".", identifier,
                [ genericTypeArguments ] ;

genericTypeArguments = "<", typeExpr,
                       { ",", typeExpr }, ">" ;

functionType = "fun", "(", [ typeArguments ], ")", ":", typeExpr ;

(* In a type position, `T?` is shorthand for `optional<T>`. The same `?`
   token has a separate expression meaning below: `expr?` unwraps an
   optional value and returns nil from the enclosing function. *)

(* A single `|` separates OR-pattern alternatives; `||` remains the logical
   expression operator. `optional<T>` and `T?` mean `T` or `nil`. Nil checks do not
   narrow: `if let v = expr` / `while let v = expr` bind a fresh non-nil
   value, `expr?` unwraps with an early nil return, `left ?? right` provides a
   fallback, and `match` binding arms bind the non-nil type. `if`/`while`/
   `for` conditions and `&&`/`||` operands must be `bool`; truthiness does not
   convert non-bool values. Generic enum declarations use `enum Box<T>`, and
   generic enum values use `Box<number>` type annotations. Literal patterns
   match primitive values directly or nested inside enum payloads; nullable
   primitive and enum matches may use `nil`. Named struct values may use
   partial or nested record patterns such as `Person { name: "Ada" }`,
   `Point { x, y }`, and `geo.Point { x: 1 }`; fields may be omitted or
   reordered. OR-pattern
   alternatives must bind the same names. Match is statement-only: every arm
   is a block, and the match requires exhaustive coverage from unguarded arms
   or a wildcard/binding arm. Nullable function parameters,
   returns, and function values use the same `optional<T>` wrapper. Nil checks
   and truthiness conditions are plain boolean tests with no type effect:
   only `nil` and `false` are falsey, while `0` and `""` are truthy. Ordering
   comparisons support `number`,
   `string`.
   String order is Unicode-scalar lexicographic order with no normalization or
   locale collation. *)

typeArguments = typeExpr,
                { ",", typeExpr }, [ "," ] ;
identifier  = letter, { letter | digit | "_" } ;
number      = digitRun,
              [ ".", digitRun ],
              [ ( "e" | "E" ), [ "+" | "-" ], digitRun ] ;
digitRun    = digit, { [ "_" ], digit } ;
string      = '"', { character }, '"' ;

(* Source strings support the escapes \n \r \t \0 \\ and \". Bare
   newlines, incomplete escapes, and unknown escapes are lexer errors.
   Line comments start with //; block comments use non-nested /* ... */ and
   are skipped by the lexer. An unterminated block comment is a lexer error.
   The `.cdbc` artifact text format has its own separate escaping rules. *)
