src/Parser.cpp
#include "Parser.hpp"

#include <optional>
#include <sstream>
#include <unordered_set>
#include <utility>

namespace {

std::string expectedFunStartMessage(const Token& token)
{
    std::ostringstream message;
    message << "expected function name after `fun` declaration or `(` for function expression, found "
            << tokenTypeName(token.type);
    if (!token.lexeme.empty()) {
        message << " `" << token.lexeme << "`";
    }
    return message.str();
}

std::optional<SourceSpan> spanForToken(const Token& token)
{
    if (!token.sourceId) {
        return std::nullopt;
    }
    SourceSpan span{
        token.sourceId->value,
        token.line,
        token.column,
    };
    if (token.range) {
        span.range = SourceSpanRange{token.range->start, token.range->end};
    }
    return span;
}

template <typename Node>
std::unique_ptr<Node> withSpan(std::unique_ptr<Node> node, const Token& token)
{
    node->span = spanForToken(token);
    node->range = token.range;
    return node;
}

template <typename Node>
std::unique_ptr<Node> withSpan(std::unique_ptr<Node> node, const std::optional<SourceSpan>& span)
{
    node->span = span;
    return node;
}

template <typename VariableBuilder, typename IndexBuilder, typename FieldBuilder>
ExprPtr buildAssignmentTarget(
    ExprPtr& expr,
    VariableBuilder variableBuilder,
    IndexBuilder indexBuilder,
    FieldBuilder fieldBuilder)
{
    if (const auto* variable = dynamic_cast<const VariableExpr*>(expr.get())) {
        return variableBuilder(variable->name);
    }

    if (auto* index = dynamic_cast<IndexExpr*>(expr.get())) {
        ExprPtr collection = std::move(index->collection);
        Token bracket = std::move(index->bracket);
        ExprPtr indexExpression = std::move(index->index);
        return indexBuilder(std::move(collection), std::move(bracket), std::move(indexExpression));
    }

    if (auto* field = dynamic_cast<FieldAccessExpr*>(expr.get())) {
        ExprPtr object = std::move(field->object);
        Token name = std::move(field->name);
        return fieldBuilder(std::move(object), std::move(name));
    }

    return nullptr;
}

class ParserStateGuard final {
public:
    explicit ParserStateGuard(int& blockDepth)
        : blockDepth_(blockDepth)
        , initialBlockDepth_(blockDepth)
    {
    }

    ParserStateGuard(const ParserStateGuard&) = delete;
    ParserStateGuard& operator=(const ParserStateGuard&) = delete;

    ~ParserStateGuard()
    {
        restore();
    }

    void restore() noexcept
    {
        blockDepth_ = initialBlockDepth_;
    }

private:
    int& blockDepth_;
    int initialBlockDepth_;
};

} // namespace

ParseError::ParseError(const Token& token, const std::string& message)
    : DiagnosticError(
        DiagnosticKind::Parse,
        SourceLocation{token.line, token.column},
        token.range,
        message)
{
}

ParseErrorList::ParseErrorList(std::vector<ParseError> errors)
    : errors_(std::move(errors))
{
}

const std::vector<ParseError>& ParseErrorList::errors() const
{
    return errors_;
}

const char* ParseErrorList::what() const noexcept
{
    return "parse errors";
}

Parser::Parser(std::vector<Token> tokens)
    : tokens_(std::move(tokens))
{
}

Program Parser::parse()
{
    Program program;
    errors_.clear();

    while (!isAtEnd()) {
        if (std::optional<StmtPtr> statement = parseDeclarationRecovering(false)) {
            program.statements.push_back(std::move(*statement));
        }
    }

    if (!errors_.empty()) {
        throw ParseErrorList(std::move(errors_));
    }

    finalizeSyntaxMetadata(program);
    return program;
}

void Parser::recordParseError(ParseError error)
{
    errors_.push_back(std::move(error));
}

std::optional<StmtPtr> Parser::parseDeclarationRecovering(bool stopAtRightBrace)
{
    ParserStateGuard stateGuard(blockDepth_);
    try {
        return declaration();
    } catch (const ParseError& error) {
        stateGuard.restore();
        recordParseError(error);
        synchronize(stopAtRightBrace);
        return std::nullopt;
    }
}

std::optional<MethodDecl> Parser::parseMethodDeclarationRecovering()
{
    ParserStateGuard stateGuard(blockDepth_);
    try {
        return methodDeclaration();
    } catch (const ParseError& error) {
        stateGuard.restore();
        recordParseError(error);
        synchronizeImplMethod();
        return std::nullopt;
    }
}

void Parser::synchronizeImplMethod()
{
    int braceDepth = 0;
    while (!isAtEnd()) {
        if (check(TokenType::LeftBrace)) {
            ++braceDepth;
            advance();
            continue;
        }

        if (check(TokenType::RightBrace)) {
            if (braceDepth == 0) {
                return;
            }
            --braceDepth;
            advance();
            continue;
        }

        if (braceDepth == 0 && check(TokenType::Fun)) {
            return;
        }
        advance();
    }
}

void Parser::synchronizeDelimitedMember()
{
    int parenthesisDepth = 0;
    int bracketDepth = 0;
    int angleDepth = 0;
    while (!isAtEnd()) {
        if (parenthesisDepth == 0 && bracketDepth == 0 && angleDepth == 0
            && (check(TokenType::Comma) || check(TokenType::RightBrace))) {
            return;
        }

        switch (peek().type) {
        case TokenType::LeftParen:
            ++parenthesisDepth;
            break;
        case TokenType::RightParen:
            if (parenthesisDepth > 0) {
                --parenthesisDepth;
            }
            break;
        case TokenType::LeftBracket:
            ++bracketDepth;
            break;
        case TokenType::RightBracket:
            if (bracketDepth > 0) {
                --bracketDepth;
            }
            break;
        case TokenType::Less:
            ++angleDepth;
            break;
        case TokenType::Greater:
            if (angleDepth > 0) {
                --angleDepth;
            }
            break;
        default:
            break;
        }
        advance();
    }
}

void Parser::synchronize(bool stopAtRightBrace)
{
    if (check(TokenType::Semicolon)) {
        advance();
    }

    while (!isAtEnd()) {
        if (check(TokenType::RightBrace)) {
            if (!stopAtRightBrace) {
                advance();
            }
            return;
        }

        switch (peek().type) {
        case TokenType::Let:
        case TokenType::Fun:
        case TokenType::Enum:
        case TokenType::Struct:
        case TokenType::Impl:
        case TokenType::Import:
        case TokenType::Export:
        case TokenType::If:
        case TokenType::Match:
        case TokenType::While:
        case TokenType::For:
        case TokenType::Break:
        case TokenType::Continue:
        case TokenType::Return:
        case TokenType::LeftBrace:
            return;
        default:
            advance();
            break;
        }
    }
}

StmtPtr Parser::declaration()
{
    if (match(TokenType::Export)) {
        if (blockDepth_ != 0) {
            throw ParseError(previous(), "`export` is only allowed at top level");
        }
        return exportDeclaration();
    }
    if (match(TokenType::Import)) {
        if (blockDepth_ != 0) {
            throw ParseError(previous(), "`import` is only allowed at top level");
        }
        return importDeclaration();
    }
    if (match(TokenType::Struct)) {
        return structDeclaration();
    }
    if (match(TokenType::Enum)) {
        return enumDeclaration();
    }
    if (match(TokenType::Impl)) {
        if (blockDepth_ != 0) {
            throw ParseError(previous(), "`impl` is only allowed at top level");
        }
        return implDeclaration();
    }
    if (check(TokenType::Fun) && checkNext(TokenType::Identifier)) {
        advance();
        return functionDeclaration();
    }
    if (check(TokenType::Fun)
        && !checkNext(TokenType::LeftParen)
        && !checkNext(TokenType::Less)) {
        advance();
        throw ParseError(peek(), expectedFunStartMessage(peek()));
    }
    if (match(TokenType::Let)) {
        return letDeclaration();
    }
    return statement();
}

StmtPtr Parser::exportDeclaration()
{
    Token keyword = previous();
    if (match(TokenType::Fun)) {
        return functionDeclaration(std::optional<Token>{std::move(keyword)});
    }
    if (match(TokenType::Struct)) {
        return structDeclaration(std::optional<Token>{std::move(keyword)});
    }

    std::vector<Token> names;

    names.push_back(consume(TokenType::Identifier, "expected identifier after `export`"));
    while (match(TokenType::Comma)) {
        if (check(TokenType::Semicolon) || checkContextualIdentifier("from")) {
            break;
        }
        names.push_back(consume(TokenType::Identifier, "expected identifier after `,` in export list"));
    }

    std::optional<Token> sourcePath;
    if (matchContextualIdentifier("from")) {
        sourcePath = consume(TokenType::String, "expected re-export path string");
        consume(TokenType::Semicolon, "expected `;` after re-export path");
    } else {
        consume(TokenType::Semicolon, "expected `;` after export list");
    }

    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(
        std::make_unique<ExportStmt>(std::move(keyword), std::move(names), std::move(sourcePath)),
        span);
}

StmtPtr Parser::structDeclaration(std::optional<Token> exportKeyword)
{
    Token keyword = previous();
    Token name = consume(TokenType::Identifier, "expected struct name after `struct`");
    std::vector<TypeParameter> parsedTypeParameters = typeParameters();
    consume(TokenType::LeftBrace, "expected `{` after struct name");
    std::vector<StructFieldDecl> fields = structFields();
    consume(TokenType::RightBrace, "expected `}` after struct fields");
    const std::optional<SourceSpan> span = exportKeyword
        ? spanForToken(*exportKeyword)
        : spanForToken(keyword);
    return withSpan(
        std::make_unique<StructDeclStmt>(
            std::move(name),
            std::move(parsedTypeParameters),
            std::move(fields),
            std::move(exportKeyword)),
        span);
}

StmtPtr Parser::enumDeclaration()
{
    Token keyword = previous();
    Token name = consume(TokenType::Identifier, "expected enum name after `enum`");
    std::vector<TypeParameter> parsedTypeParameters = typeParameters();
    consume(TokenType::LeftBrace, "expected `{` after enum name");
    std::vector<EnumVariantDecl> variants = enumVariants();
    consume(TokenType::RightBrace, "expected `}` after enum variants");
    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(
        std::make_unique<EnumDeclStmt>(
            std::move(name), std::move(parsedTypeParameters), std::move(variants)),
        span);
}

std::vector<EnumVariantDecl> Parser::enumVariants()
{
    std::vector<EnumVariantDecl> variants;
    if (!check(TokenType::RightBrace)) {
        while (true) {
            try {
                variants.push_back(enumVariant());
            } catch (const ParseError& error) {
                recordParseError(error);
                synchronizeDelimitedMember();
            }
            if (!match(TokenType::Comma) || check(TokenType::RightBrace)) {
                break;
            }
        }
    }
    return variants;
}

EnumVariantDecl Parser::enumVariant()
{
    Token name = consume(TokenType::Identifier, "expected enum variant name");
    std::vector<TypeAnnotation> payloadTypes;
    std::vector<std::optional<Token>> payloadNames;
    if (match(TokenType::LeftParen)) {
        if (!check(TokenType::RightParen)) {
            bool sawNamed = false;
            bool sawPositional = false;
            std::unordered_set<std::string> payloadFieldNames;
            do {
                if (check(TokenType::Identifier) && checkNext(TokenType::Colon)) {
                    Token field = advance();
                    advance();
                    sawNamed = true;
                    if (sawPositional) {
                        throw ParseError(
                            field,
                            "enum variant payload fields must be either all named or all positional");
                    }
                    if (!payloadFieldNames.insert(field.lexeme).second) {
                        throw ParseError(
                            field,
                            "duplicate enum payload field " + field.lexeme);
                    }
                    payloadNames.push_back(field);
                    payloadTypes.push_back(
                        typeAnnotation("expected named payload type"));
                } else {
                    sawPositional = true;
                    if (sawNamed) {
                        throw ParseError(
                            peek(),
                            "enum variant payload fields must be either all named or all positional");
                    }
                    payloadNames.push_back(std::nullopt);
                    payloadTypes.push_back(
                        typeAnnotation("expected enum variant payload type"));
                }
            } while (match(TokenType::Comma) && !check(TokenType::RightParen));
        }
        consume(TokenType::RightParen, "expected `)` after enum variant payload types");
    }
    return EnumVariantDecl{
        std::move(name),
        std::move(payloadTypes),
        std::move(payloadNames)};
}

std::vector<StructFieldDecl> Parser::structFields()
{
    std::vector<StructFieldDecl> fields;
    if (!check(TokenType::RightBrace)) {
        do {
            try {
                fields.push_back(structField());
            } catch (const ParseError& error) {
                recordParseError(error);
                synchronizeDelimitedMember();
            }
        } while (match(TokenType::Comma) && !check(TokenType::RightBrace));
    }
    return fields;
}

StructFieldDecl Parser::structField()
{
    const bool isPrivate = match(TokenType::Private);
    Token name = consume(TokenType::Identifier, "expected struct field name");
    consume(TokenType::Colon, "expected `:` after struct field name");
    TypeAnnotation typeName = typeAnnotation("expected struct field type after `:`");
    return StructFieldDecl{std::move(name), std::move(typeName), isPrivate};
}

StmtPtr Parser::implDeclaration()
{
    Token keyword = previous();
    Token typeName = consume(TokenType::Identifier, "expected struct name after `impl`");
    std::vector<TypeParameter> parsedTypeParameters = typeParameters();
    consume(TokenType::LeftBrace, "expected `{` after impl type name");
    std::vector<MethodDecl> methods;
    while (!check(TokenType::RightBrace) && !isAtEnd()) {
        if (std::optional<MethodDecl> method = parseMethodDeclarationRecovering()) {
            methods.push_back(std::move(*method));
        }
    }
    consume(TokenType::RightBrace, "expected `}` after impl methods");
    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(
        std::make_unique<ImplStmt>(
            std::move(typeName), std::move(parsedTypeParameters), std::move(methods)),
        span);
}

MethodDecl Parser::methodDeclaration()
{
    consume(TokenType::Fun, "expected `fun` method declaration in impl block");
    Token name = consume(TokenType::Identifier, "expected method name after `fun`");
    std::vector<TypeParameter> parsedTypeParameters = typeParameters();
    consume(TokenType::LeftParen, "expected `(` after method name");
    std::vector<Parameter> parsedParameters = parameters();
    consume(TokenType::RightParen, "expected `)` after method parameters");
    std::optional<TypeAnnotation> returnTypeName = optionalReturnType();
    consume(TokenType::LeftBrace, "expected `{` before method body");
    ++blockDepth_;
    std::vector<StmtPtr> body = blockStatements();
    --blockDepth_;
    return MethodDecl(
        std::move(name),
        std::move(parsedTypeParameters),
        std::move(parsedParameters),
        std::move(returnTypeName),
        std::move(body));
}

StmtPtr Parser::functionDeclaration(std::optional<Token> exportKeyword)
{
    Token keyword = previous();
    Token name = consume(TokenType::Identifier, "expected function name after `fun`");
    std::vector<TypeParameter> parsedTypeParameters = typeParameters();
    consume(TokenType::LeftParen, "expected `(` after function name");

    std::vector<Parameter> parsedParameters = parameters();
    consume(TokenType::RightParen, "expected `)` after function parameters");
    std::optional<TypeAnnotation> returnTypeName = optionalReturnType();
    consume(TokenType::LeftBrace, "expected `{` before function body");
    ++blockDepth_;
    std::vector<StmtPtr> body = blockStatements();
    --blockDepth_;
    const std::optional<SourceSpan> span = exportKeyword
        ? spanForToken(*exportKeyword)
        : spanForToken(keyword);
    return withSpan(
        std::make_unique<FunctionStmt>(
            std::move(name),
            std::move(parsedTypeParameters),
            std::move(parsedParameters),
            std::move(returnTypeName),
            std::move(body),
            std::move(exportKeyword)),
        span);
}

std::vector<TypeParameter> Parser::typeParameters()
{
    std::vector<TypeParameter> parameters;
    if (!match(TokenType::Less)) {
        return parameters;
    }
    do {
        Token name = consume(
            TokenType::Identifier,
            "expected type parameter name after `<` or `,`");
        std::vector<TypeAnnotation> constraints;
        if (match(TokenType::Colon)) {
            TokenType separator = TokenType::Colon;
            while (true) {
                constraints.push_back(typeAnnotation(
                    separator == TokenType::Plus
                        ? "expected type constraint after `+`"
                        : "expected type constraint after `:`"));
                if (!match(TokenType::Plus)) {
                    break;
                }
                separator = TokenType::Plus;
            }
        }
        parameters.push_back(TypeParameter{std::move(name), std::move(constraints)});
    } while (match(TokenType::Comma) && !check(TokenType::Greater));
    consume(TokenType::Greater, "expected `>` after type parameters");
    return parameters;
}

StmtPtr Parser::letDeclarationNoSemicolon(const std::string& terminatorMessage)
{
    Token keyword = previous();
    const bool isMutable = match(TokenType::Mut);
    Token name = consume(TokenType::Identifier, "expected variable name after `let`");

    std::optional<TypeAnnotation> typeName;
    if (match(TokenType::Colon)) {
        typeName = typeAnnotation("expected type name after `:`");
    }

    consume(TokenType::Equal, "expected `=` after variable declaration");
    ExprPtr initializer = expression();

    if (!terminatorMessage.empty()) {
        consume(TokenType::Semicolon, terminatorMessage);
    }
    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(
        std::make_unique<LetStmt>(
            std::move(name),
            std::move(typeName),
            std::move(initializer),
            isMutable),
        span);
}

StmtPtr Parser::letDeclaration()
{
    return letDeclarationNoSemicolon("expected `;` after variable declaration");
}

StmtPtr Parser::importDeclaration()
{
    Token keyword = previous();

    std::vector<ImportSpecifier> specifiers;
    if (match(TokenType::LeftBrace)) {
        if (check(TokenType::RightBrace)) {
            throw ParseError(peek(), "expected at least one imported name");
        }
        do {
            Token name = consume(TokenType::Identifier, "expected identifier in import list");
            std::optional<Token> alias;
            if (match(TokenType::As)) {
                alias = consume(TokenType::Identifier, "expected local name after `as` in import list");
            }
            specifiers.push_back(ImportSpecifier{std::move(name), std::move(alias)});
        } while (match(TokenType::Comma) && !check(TokenType::RightBrace));
        consume(TokenType::RightBrace, "expected `}` after import list");
        if (!matchContextualIdentifier("from")) {
            throw ParseError(peek(), "expected `from` after import list");
        }
    }

    Token path = consume(TokenType::String, "expected import path string");
    std::optional<Token> alias;
    if (specifiers.empty() && match(TokenType::As)) {
        alias = consume(TokenType::Identifier, "expected namespace alias after `as`");
    }
    consume(TokenType::Semicolon, alias ? "expected `;` after import alias" : "expected `;` after import path");
    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(
        std::make_unique<ImportStmt>(
            std::move(keyword), std::move(path), std::move(alias), std::move(specifiers)),
        span);
}

std::vector<Parameter> Parser::parameters()
{
    std::vector<Parameter> parsedParameters;
    if (!check(TokenType::RightParen)) {
        do {
            parsedParameters.push_back(parameter());
        } while (match(TokenType::Comma) && !check(TokenType::RightParen));
    }
    return parsedParameters;
}

Parameter Parser::parameter()
{
    Token name = consume(TokenType::Identifier, "expected parameter name");
    std::optional<TypeAnnotation> typeName;
    if (match(TokenType::Colon)) {
        typeName = typeAnnotation("expected parameter type after `:`");
    }
    return Parameter{std::move(name), std::move(typeName)};
}

std::optional<TypeAnnotation> Parser::optionalReturnType()
{
    if (!match(TokenType::Colon)) {
        return std::nullopt;
    }
    return typeAnnotation("expected return type after `:`");
}

TypeAnnotation Parser::typeAnnotation(const std::string& simpleTypeMessage)
{
    TypeAnnotation annotation;

    if (match(TokenType::LeftBracket)) {
        Token bracket = previous();
        TypeAnnotation elementType = typeAnnotation("expected array element type after `[`");
        consume(TokenType::RightBracket, "expected `]` after array element type");
        annotation = TypeAnnotation::array(std::move(bracket), std::move(elementType));
    } else if (checkContextualIdentifier("map") && checkNext(TokenType::Less)) {
        Token mapToken = advance();
        consume(TokenType::Less, "expected `<` after `map` type");
        TypeAnnotation keyType = typeAnnotation("expected map key type after `<`");
        consume(TokenType::Comma, "expected `,` between map key and value types");
        TypeAnnotation valueType = typeAnnotation("expected map value type after `,`");
        consume(TokenType::Greater, "expected `>` after map value type");
        annotation = TypeAnnotation::map(
            std::move(mapToken), std::move(keyType), std::move(valueType));
    } else if (checkContextualIdentifier("optional") && checkNext(TokenType::Less)) {
        Token optionalToken = advance();
        consume(TokenType::Less, "expected `<` after `optional` type");
        if (check(TokenType::Greater)) {
            throw ParseError(peek(), "expected type argument after `optional<`");
        }
        TypeAnnotation innerType = typeAnnotation("expected type argument after `optional<`");
        consume(TokenType::Greater, "expected `>` after optional type");
        annotation = TypeAnnotation::nullable(std::move(optionalToken), std::move(innerType));
    } else if (match(TokenType::Fun)) {
        Token keyword = previous();
        consume(TokenType::LeftParen, "expected `(` after `fun` in function type");
        std::vector<TypeAnnotation> parameterTypes = typeArguments();
        consume(TokenType::RightParen, "expected `)` after function type parameters");
        consume(TokenType::Colon, "expected `:` before function type return");
        TypeAnnotation returnType = typeAnnotation();
        annotation = TypeAnnotation::function(
            std::move(keyword), std::move(parameterTypes), std::move(returnType));
    } else {
        Token name = consume(TokenType::Identifier, simpleTypeMessage);
        if (match(TokenType::Dot)) {
            Token member = consume(TokenType::Identifier, "expected type name after `.`");
            annotation = TypeAnnotation::qualified(std::move(name), std::move(member));
        } else {
            annotation = TypeAnnotation::simple(std::move(name));
        }

        if (match(TokenType::Less)) {
            if (check(TokenType::Greater)) {
                throw ParseError(peek(), "expected type argument after `<`");
            }
            do {
                annotation.typeArguments.push_back(typeAnnotation("expected type argument after `<`"));
            } while (match(TokenType::Comma) && !check(TokenType::Greater));
            consume(TokenType::Greater, "expected `>` after type arguments");
        }
    }

    if (match(TokenType::Question)) {
        Token question = previous();
        annotation = TypeAnnotation::nullable(std::move(question), std::move(annotation));
    }
    return annotation;
}

std::vector<TypeAnnotation> Parser::typeArguments()
{
    std::vector<TypeAnnotation> arguments;
    if (!check(TokenType::RightParen)) {
        do {
            arguments.push_back(typeAnnotation());
        } while (match(TokenType::Comma) && !check(TokenType::RightParen));
    }
    return arguments;
}

StmtPtr Parser::statement()
{
    if (match(TokenType::If)) {
        return ifStatement();
    }
    if (match(TokenType::Match)) {
        return matchStatement();
    }
    if (match(TokenType::For)) {
        return forStatement();
    }
    if (match(TokenType::While)) {
        return whileStatement();
    }
    if (match(TokenType::Break)) {
        return breakStatement();
    }
    if (match(TokenType::Continue)) {
        return continueStatement();
    }
    if (match(TokenType::Return)) {
        return returnStatement();
    }
    if (match(TokenType::LeftBrace)) {
        return blockStatement();
    }
    return expressionStatement();
}
